--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
   }
