--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "webpack-dev-server"
+    "start-dev": "webpack-dev-server",
+    "start-server": "node server/server.js",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +29,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
